# todo-Rust

./: .gitignore  README.md
example-rust/: Cargo.toml
example-rust/src/: main.rs
rust_base/hello/: Cargo.toml
rust_base/hello/src/: lib.rs  main.rs  spanish.rs
todo_api/: .env  Cargo.toml  diesel.toml  docker-compose.yaml
todo_api/migrations/: 20260612031304_init_todos.up.sql  20260612031414_user_register.down.sql  20260612031414_user_register.up.sql
todo_api/migrations/2026-06-10-053314-0000_initial_tables/: up.sql
todo_api/migrations/2026-06-10-053403-0000_user_registration/: up.sql
todo_api/src/: main.rs
todo_api/src/db/: migration.rs  mod.rs  models.rs  schema.rs
todo_api/src/handlers/: mod.rs  models.rs
todo_api/src/handlers/auth/: login.rs  mod.rs  models.rs  registration.rs
todo_api/src/handlers/todo/: create.rs  delete.rs  get.rs  lists.rs  mod.rs  models.rs  partial_update.rs  update.rs
todo_api/src/service/: auth.rs  jwt.rs  mod.rs  todo.rs
