[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argonautica = "0.2.0"
axum = "0.8.9"
axum-prometheus = "0.10.0"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
sha2 = "0.10.9"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "tls-native-tls",
  "mysql",
  "macros",
  "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
